--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Parking Card Balance</title>
-  <link rel="stylesheet" href="Parking_card_balance.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
